Fixes for alignment of icons

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/mediaLink/_mediaLink.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/mediaLink/_mediaLink.scss
@@ -90,6 +90,7 @@
         }
         .icon.icon-Circle_Arrow_Right_pw {
             @include margin-top(16px);
+            @include padding-right(16px);
             line-height: 24px;
         }
     }
